<resources>
    <string name="app_name">WORK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="laps_remaining">Laps Remaining</string>
    <string name="_0">0</string>
    <string name="restart">Restart</string>
    <string name="configure">CONFIGURE</string>
    <string name="reset">RESET</string>
    <string name="enter_time_hh_mm_ss">enter_time_hh_mm_ss</string>
    <string name="tabs_for_navigation">Tabs for navigation</string>
    <string name="enter_lap_time_in_seconds">Enter Lap Time (in seconds)</string>
    <string name="enter_laps">Enter Laps</string>
    <string-array name="stepbrothers_array">
        <item>Pick a sound</item>
        <item>Alarm</item>
        <item>Mechanical Alarm</item>
        <item>Chiptune</item>
        <item>Fantasy</item>
        <item>Rooster</item>
        <item>Simplified</item>

    </string-array>
</resources>